# velostream

./: .clippy.toml  .gitignore  ANALYSIS_SUMMARY.md  BASELINE_QUICK_REFERENCE.md  BASELINE_TESTING.md  BOTTLENECK_ANALYSIS_RESULTS.md  BUILDER_PATTERN_GUIDE.md  CLAUDE.md  Cargo.toml  DATASOURCE_EXTRACTION_PLAN.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DLQ_COMMON_HELPER_ANALYSIS.md  DLQ_IMPLEMENTATION_ANALYSIS.md  DOCKER_KAFKA.md  Dockerfile  Dockerfile.multi  Dockerfile.sqlfile  FR-079-IMPLEMENTATION-STATUS.md  LICENSE  MULTI_JOB_SQL_GUIDE.md  NOTICE  PERFORMANCE_BENCHMARK_RESULTS.md  PERFORMANCE_CONFIGS.md  PERFORMANCE_CONSOLIDATION_PLAN.md  PERFORMANCE_MONITORING.md  PHASE_2_PLAN.md  PHASE_6_4_PERFORMANCE_OPTIMIZATIONS.md  PIPELINE_DEMO_README.md  PROCESSOR_ANALYSIS_INDEX.md  PROCESSOR_CODE_COMPARISON.md  PROCESSOR_COMPARISON.md  PROCESSOR_COMPARISON_QUICK_REFERENCE.txt  PROFILING_ANALYSIS.md  README.md  README_V2_EXPLORATION.md  REFACTORING_FINAL_REPORT.md  REFACTORING_QUICK_SUMMARY.md  REFACTORING_SUMMARY.md  SCRIPTS_README.md  (+93 more)
.cargo/: config.toml
benches/: join_performance.rs
benchmarks/: CONFIGURABLE_PERFORMANCE_TESTING.md  Cargo.toml  MAIN_WORKFLOW.md  README.md  SQL_OPERATIONS_BENCHMARK_README.md  generate_performance_summary.sh  run_all_sql_operations.sh  run_and_update_benchmarks.sh  run_baseline.sh  run_baseline_flexible.sh  run_baseline_options.sh  run_baseline_quick.sh  update_docs_from_results.py  update_docs_with_comparison.py  update_docs_with_results.sh
benchmarks/docs/: README.md  SQL_OPERATIONS_BENCHMARK_README.md  UPDATE_DOCS_README.md
demo/trading/: .gitignore  CLI_USAGE.md  Cargo.toml  DEMO-IMPROVEMENTS.md  DEMO_SUMMARY.md  Makefile  README.md  TESTING.md  build-cli.sh  build_cli.sh  check-demo-health.sh  cli-usage.md  dashboard.py  demo-summary.md  docker-compose.yml  generate-data.sh  kafka-compose.yml  quick-start.sh  requirements.txt  run-demo.sh  run_ctas_demo.sh  run_demo.sh  setup-dashboard.sh  setup_dashboard.sh  sql-single-validator.sh  sql-validator.sh  start-demo.sh  stop-demo.sh  stop_demo.sh  test-with-harness.sh  test_ctas_files.sh  test_spec.yaml  test_spec_new.yaml  velo-dashboard-generate.sh  velo-test.sh
demo/trading/apps/: app_compliance.annotated.sql  app_compliance.sql  app_market_data.annotated.sql  app_market_data.sql  app_price_analytics.annotated.sql  app_price_analytics.sql  app_risk.annotated.sql  app_risk.sql  app_trading_signals.annotated.sql  app_trading_signals.sql
demo/trading/configs/: README.md  active_hours_market_data_sink.yaml  arbitrage_opportunities_sink.yaml  arbitrage_opportunities_topic.yaml  common_kafka_sink.yaml  common_kafka_source.yaml  common_table_source.yaml  compliant_market_data_sink.yaml  desk_limits_table.yaml  enriched_market_data_sink.yaml  file_market_data_source.yaml  file_order_history_source.yaml  file_positions_source.yaml  firm_limits_table.yaml  instrument_reference_table.yaml  instrument_schedules_table.yaml  kafka_sink.yaml  kafka_source.yaml  market_data_clean_sink.yaml  market_data_et_sink.yaml  market_data_et_source.yaml  market_data_exchange_a_source.yaml  market_data_exchange_b_source.yaml  market_data_source.yaml  market_data_topic.yaml  market_data_ts_sink.yaml  market_data_ts_source.yaml  multi_source_risk_monitoring.yaml  order_book_source.yaml  order_book_topic.yaml  order_imbalance_sink.yaml  order_imbalance_topic.yaml  price_alerts_sink.yaml  price_alerts_topic.yaml  regulatory_watchlist_table.yaml  risk_alerts_sink.yaml  risk_alerts_topic.yaml  risk_hierarchy_validation_sink.yaml  risk_limits_table.yaml  tick_buckets_sink.yaml  (+7 more)
demo/trading/data/: desk_limits.csv  firm_limits.csv  instrument_reference.csv  instrument_schedules.csv  market_data.csv  order_history.csv  regulatory_watchlist.csv  risk_limits.csv  trader_limits.csv  trading_halts.csv  trading_positions.csv
demo/trading/grafana/: prometheus.yml
demo/trading/grafana/grafana/dashboards/: app_compliance-dashboard.json  app_market_data-dashboard.json  app_price_analytics-dashboard.json  app_risk-dashboard.json  app_trading_signals-dashboard.json  dashboard.yml
demo/trading/monitoring/: prometheus.yml
demo/trading/monitoring/grafana/dashboards/: app_compliance-dashboard.json  app_compliance.annotated-dashboard.json  app_market_data-dashboard.json  app_market_data.annotated-dashboard.json  app_price_analytics-dashboard.json  app_price_analytics.annotated-dashboard.json  app_risk-dashboard.json  app_risk.annotated-dashboard.json  app_trading_signals-dashboard.json  app_trading_signals.annotated-dashboard.json  dashboard.yml  distributed-tracing.json  error-tracking.json  ferrisstreams-overview.json  ferrisstreams-trading.json  kafka-metrics.json  system-overview.json  trading-overview.json  velostream-error-tracking.json  velostream-ops.json  velostream-overview.json  velostream-telemetry.json  velostream-tracing.json  velostream-trading.json  velostream_overview.json
demo/trading/monitoring/grafana/datasources/: prometheus.yml
demo/trading/monitoring/grafana/provisioning/: tempo.yaml
demo/trading/monitoring/grafana/provisioning/dashboards/: dashboard.yml
demo/trading/monitoring/grafana/provisioning/datasources/: tempo.yml
demo/trading/monitoring/tempo/: tempo.yaml
demo/trading/schemas/: README.md  arbitrage_opportunities.avsc  in_market_data_stream.schema.yaml  in_market_data_stream_a.schema.yaml  in_market_data_stream_b.schema.yaml  in_order_book_stream.schema.yaml  market_data.avsc  market_data.schema.yaml  market_data_ts.avsc  market_data_ts.schema.yaml  order_book.schema.yaml  order_book_updates.avsc  order_imbalance_alerts.avsc  price_alerts.avsc  risk_alerts.avsc  trading_positions.avsc  trading_positions.schema.yaml  trading_positions_stream.schema.yaml  volume_spikes.avsc
demo/trading/sql/: ctas_file_trading.sql  financial_trading.sql  financial_trading_legacy.sql  single_trading.sql
demo/trading/src/: trading_data_generator.rs
demo/trading/tests/: app_compliance.test.yaml  app_market_data.test.yaml  app_price_analytics.test.yaml  app_risk.test.yaml  app_trading_signals.test.yaml
(+2358 files in other folders)
