[package]
name = "velostream"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
license = "Apache-2.0"
authors = ["Velostream Contributors"]
description = "High-performance stream processing engine with SQL support"
repository = "https://github.com/velostreamai/velostream"
keywords = ["streaming", "sql", "kafka", "data-processing", "real-time"]
categories = ["database-implementations", "asynchronous", "data-structures"]

[dependencies]
pretty_env_logger = "0.5.0"
log = "0.4.27"
env_logger = "0.11.8"
rdkafka = "0.38.0"
tokio = { version = "1.47.0", features = ["full"] }
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4"] }
logtest = "2.0.0"
futures = "0.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0.69"
nom = "7.1.3"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
hyperloglogplus = "0.4.1"
rust_decimal = { version = "1.36.0", features = ["serde"] }
regex = "1.5"
async-trait = "0.1"
lazy_static = "1.4"

# Dependencies for additional serialization formats (now always available)
apache-avro = { version = "0.20.0" }
prost = { version = "0.14.1" }
bincode = { version = "1.3.3", optional = true }
base64 = "0.21"

# Phase 4: Observability Dependencies (simplified)
prometheus = "0.14.0"

[build-dependencies]
prost-build = { version = "0.14.1" }

[dev-dependencies]
serial_test = "2.0.0"
crossbeam-queue = "0.3"
tokio-stream = "0.1"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.12.0"
futures = "0.3"


# Performance examples - organized in subfolder
[[example]]
name = "json_performance_test"
path = "examples/performance/json_performance_test.rs"

[[example]]
name = "raw_bytes_performance_test"
path = "examples/performance/raw_bytes_performance_test.rs"

[[example]]
name = "latency_performance_test"
path = "examples/performance/latency_performance_test.rs"

[[example]]
name = "simple_zero_copy_test"
path = "examples/performance/simple_zero_copy_test.rs"

[[example]]
name = "simple_async_optimization_test"
path = "examples/performance/simple_async_optimization_test.rs"

[[example]]
name = "resource_monitoring_test"
path = "examples/performance/resource_monitoring_test.rs"

[[example]]
name = "datasource_performance_test"
path = "examples/performance/datasource_performance_test.rs"

[[example]]
name = "quick_performance_test"
path = "examples/performance/quick_performance_test.rs"

# Multi-Job SQL Server Binary
[[bin]]
name = "velo-sql-multi"
path = "src/bin/velo-sql-multi.rs"

# Velostream CLI Binary
[[bin]]
name = "velo-cli"
path = "src/bin/velo_cli.rs"

# SQL Validator Binary (Object-Oriented Version)
[[bin]]
name = "sql-validator-new"
path = "src/bin/sql_validator_new.rs"

# File Processing Demo Binary
[[bin]]
name = "file_processing_demo"
path = "demo/datasource-demo/file_processing_demo.rs"

# Complete Pipeline Demo Binary
[[bin]]
name = "complete_pipeline_demo"
path = "demo/datasource-demo/complete_pipeline_demo.rs"

# SQL Batch Execution Binary
[[bin]]
name = "sql-batch"
path = "src/bin/sql_batch.rs"

# Debug Encoding Test
[[bin]]
name = "debug_encoding_test"
path = "tests/debug/debug_encoding_test.rs"



# Performance Benchmarks
# (No active benchmarks currently - use cargo test for performance tests)

# Simple Conversion Performance Test
[[bin]]
name = "simple_conversion_test"
path = "tests/debug/simple_conversion_test.rs"

# StreamRecord Performance Test
[[bin]]
name = "test_streamrecord_performance" 
path = "tests/debug/test_streamrecord_performance.rs"

# Final Complete Performance Test
[[bin]]
name = "test_final_performance"
path = "tests/debug/test_final_performance.rs"



# Features for test categorization
[features]
default = []
comprehensive-tests = []  # Enable comprehensive/slow tests that take 40+ seconds
