[package]
name = "ferris-streams-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core FerrisStreams
ferrisstreams = { path = ".." }

# Benchmarking framework
criterion = { version = "0.5", features = ["html_reports"] }

# Memory profiling
jemalloc-ctl = { version = "0.5", optional = true }

# Statistical analysis
statistical = "1.0"

# Test data generation
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time utilities
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
jemalloc = ["jemalloc-ctl"]

[[bench]]
name = "financial_precision"
harness = false

[[bench]]
name = "serialization"
harness = false

[[bench]]
name = "memory_allocation"
harness = false

[[bench]]
name = "kafka_pipeline"
harness = false

[[bench]]
name = "sql_execution"
harness = false

[profile.bench]
debug = true
lto = true
codegen-units = 1