[package]
name = "trading-demo"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"

[[bin]]
name = "trading_data_generator"
path = "src/trading_data_generator.rs"

[dependencies]
# Reference the main VeloStream library
velostream = { path = "../.." }

# Required dependencies for trading data generator
tokio = { version = "1.46.1", features = ["full"] }
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
log = "0.4.27"
env_logger = "0.11.8"
rdkafka = "0.38.0"